--- a/patterns/basics/index.html
+++ b/patterns/basics/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1478705701292" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478705701292" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1478705701292" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1478626785015" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478626785015" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1478626785015" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478705701292" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478705701292" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478626785015" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478626785015" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -878,11 +878,11 @@
   </div>
   <div class="sg-pattern-example">
     <ul>
-  <li>Name: Jacobus Sneiders</li>
-  <li>Name: Teun Richard</li>
-  <li>Name: Freyr Hines</li>
-  <li>Name: Bertil Aaij</li>
   <li>Name: Matthias Macguinness</li>
+  <li>Name: Duane Wilms</li>
+  <li>Name: Junius Koolen</li>
+  <li>Name: Freyr Hines</li>
+  <li>Name: Jacobus Sneiders</li>
 </ul>
 
   </div>
@@ -932,10 +932,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1478705701292">
+<script id="pl-js-polyfill-insert-1478626785015">
   (function() {
     if (self != top) {
-      var cb = '1478705701292';
+      var cb = '1478626785015';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -945,10 +945,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1478705701292">
+<script id="pl-js-insert-1478626785015">
   (function() {
     if (self != top) {
-      var cb = '1478705701292';
+      var cb = '1478626785015';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
