Added files from commit #c6956e31f0f151050254b80d39f1d8628e89350e

--- a/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
+++ b/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
@@ -1,7 +1,7 @@
 <ul>
-  <li>Name: Matthias Macguinness</li>
-  <li>Name: Duane Wilms</li>
   <li>Name: Junius Koolen</li>
+  <li>Name: Bertil Aaij</li>
   <li>Name: Freyr Hines</li>
-  <li>Name: Jacobus Sneiders</li>
+  <li>Name: Frans Keegan</li>
+  <li>Name: Aquila Achterkamp</li>
 </ul>
