--- a/patterns/basics-02-forms/index.html
+++ b/patterns/basics-02-forms/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1478626785015" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478626785015" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1478626785015" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1478804183532" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478804183532" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1478804183532" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478626785015" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478626785015" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478804183532" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478804183532" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -55,7 +55,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-input" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"components-search","lineagePath":"../../patterns/components-forms-search/components-forms-search.rendered.html"},{"lineagePattern":"templates-form","lineagePath":"../../patterns/templates-form/templates-form.rendered.html"}],"lineageR":[{"lineagePattern":"components-search","lineagePath":"../../patterns/components-forms-search/components-forms-search.rendered.html"},{"lineagePattern":"templates-form","lineagePath":"../../patterns/templates-form/templates-form.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>This is a <em>Markdown</em> description of my pattern.</p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"forms"},"patternExtension":"hbs","patternName":"Input","patternPartial":"basics-input","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"components-search","lineagePath":"../../patterns/components-forms-search/components-forms-search.rendered.html"},{"lineagePattern":"components-main-toolbar","lineagePath":"../../patterns/components-toolbar-main-toolbar/components-toolbar-main-toolbar.rendered.html"},{"lineagePattern":"templates-form","lineagePath":"../../patterns/templates-form/templates-form.rendered.html"}],"lineageR":[{"lineagePattern":"components-search","lineagePath":"../../patterns/components-forms-search/components-forms-search.rendered.html"},{"lineagePattern":"components-main-toolbar","lineagePath":"../../patterns/components-toolbar-main-toolbar/components-toolbar-main-toolbar.rendered.html"},{"lineagePattern":"templates-form","lineagePath":"../../patterns/templates-form/templates-form.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<p>This is a <em>Markdown</em> description of my pattern.</p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"forms"},"patternExtension":"hbs","patternName":"Input","patternPartial":"basics-input","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
   </div> <!--end #sg-patterns-->
@@ -100,10 +100,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1478626785015">
+<script id="pl-js-polyfill-insert-1478804183532">
   (function() {
     if (self != top) {
-      var cb = '1478626785015';
+      var cb = '1478804183532';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -113,10 +113,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1478626785015">
+<script id="pl-js-insert-1478804183532">
   (function() {
     if (self != top) {
-      var cb = '1478626785015';
+      var cb = '1478804183532';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
