--- a/patterns/basics-10-tags-tag-styles/basics-10-tags-tag-styles.markup-only.html
+++ b/patterns/basics-10-tags-tag-styles/basics-10-tags-tag-styles.markup-only.html
@@ -40,5 +40,5 @@
 </span>
 <span class="tag tag-info">
   dismissable tag
-    <a href="#"><span class="pficon pficon-close">X <!--TODO: use a close atom --></span></a>
+    <a class="tag__a" href="#"><span class="pficon pficon-close"></span></a>
 </span>
