--- a/patterns/basics-10-tags/index.html
+++ b/patterns/basics-10-tags/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1478626785015" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478626785015" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1478626785015" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1478804183532" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478804183532" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1478804183532" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478626785015" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478626785015" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478804183532" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478804183532" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -57,7 +57,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-tag" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-tag-styles","lineagePath":"../../patterns/basics-10-tags-tag-styles/basics-10-tags-tag-styles.rendered.html"}],"lineageR":[{"lineagePattern":"basics-tag-styles","lineagePath":"../../patterns/basics-10-tags-tag-styles/basics-10-tags-tag-styles.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/components/tag/\">see complete documentation here</a></p>\n<p><strong>NOTE:</strong> Bootstrap 4 renames Labels to be Tags in order disambiguate with the &lt;label&gt; tag. See <a href=\"http://getbootstrap.com/components/#labels\">http://getbootstrap.com/components/#labels</a> for complete labels documentation.</p>\n<p>Patternfly design specs are at <a href=\"http://www.patternfly.org/pattern-library/widgets/#labels\">http://www.patternfly.org/pattern-library/widgets/#labels</a></p>\n<p>Must add a modifier class to add color to the label.</p>\n<h2>Usage</h2>\n<p>See Bootstrap 4 documentation <a href=\"http://v4-alpha.getbootstrap.com/components/tag/\">http://v4-alpha.getbootstrap.com/components/tag/</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"tags"},"patternExtension":"hbs","patternName":"Tag","patternPartial":"basics-tag","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-tag-styles","lineagePath":"../../patterns/basics-10-tags-tag-styles/basics-10-tags-tag-styles.rendered.html"},{"lineagePattern":"components-filter-list","lineagePath":"../../patterns/components-filter-list-filter-list/components-filter-list-filter-list.rendered.html"},{"lineagePattern":"components-filter-toolbar","lineagePath":"../../patterns/components-toolbar-filter-toolbar/components-toolbar-filter-toolbar.rendered.html"}],"lineageR":[{"lineagePattern":"basics-tag-styles","lineagePath":"../../patterns/basics-10-tags-tag-styles/basics-10-tags-tag-styles.rendered.html"},{"lineagePattern":"components-filter-list","lineagePath":"../../patterns/components-filter-list-filter-list/components-filter-list-filter-list.rendered.html"},{"lineagePattern":"components-filter-toolbar","lineagePath":"../../patterns/components-toolbar-filter-toolbar/components-toolbar-filter-toolbar.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/components/tag/\">see complete documentation here</a></p>\n<p><strong>NOTE:</strong> Bootstrap 4 renames Labels to be Tags in order disambiguate with the &lt;label&gt; tag. See <a href=\"http://getbootstrap.com/components/#labels\">http://getbootstrap.com/components/#labels</a> for complete labels documentation.</p>\n<p>Patternfly design specs are at <a href=\"http://www.patternfly.org/pattern-library/widgets/#labels\">http://www.patternfly.org/pattern-library/widgets/#labels</a></p>\n<p>Must add a modifier class to add color to the label.</p>\n<h2>Usage</h2>\n<p>See Bootstrap 4 documentation <a href=\"http://v4-alpha.getbootstrap.com/components/tag/\">http://v4-alpha.getbootstrap.com/components/tag/</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"tags"},"patternExtension":"hbs","patternName":"Tag","patternPartial":"basics-tag","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="basics-tag-styles" class="sg-pattern">
@@ -116,7 +116,7 @@
 </span>
 <span class="tag tag-info">
   dismissable tag
-    <a href="#"><span class="pficon pficon-close">X <!--TODO: use a close atom --></span></a>
+    <a class="tag__a" href="#"><span class="pficon pficon-close"></span></a>
 </span>
 
   </div>
@@ -166,10 +166,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1478626785015">
+<script id="pl-js-polyfill-insert-1478804183532">
   (function() {
     if (self != top) {
-      var cb = '1478626785015';
+      var cb = '1478804183532';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -179,10 +179,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1478626785015">
+<script id="pl-js-insert-1478804183532">
   (function() {
     if (self != top) {
-      var cb = '1478626785015';
+      var cb = '1478804183532';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
