--- a/patterns/basics-dropdowns/index.html
+++ b/patterns/basics-dropdowns/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1478626785015" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478626785015" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1478626785015" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1478804183532" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1478804183532" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1478804183532" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478626785015" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478626785015" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1478804183532" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1478804183532" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -64,7 +64,7 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-dropdown" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-dropdown-states","lineagePath":"../../patterns/basics-dropdowns-01-dropdown-states/basics-dropdowns-01-dropdown-states.rendered.html"},{"lineagePattern":"basics-dropdown-styles","lineagePath":"../../patterns/basics-dropdowns-02-dropdown-styles/basics-dropdowns-02-dropdown-styles.rendered.html"},{"lineagePattern":"components-card","lineagePath":"../../patterns/components-03-cards-00-card/components-03-cards-00-card.rendered.html"}],"lineageR":[{"lineagePattern":"basics-dropdown-states","lineagePath":"../../patterns/basics-dropdowns-01-dropdown-states/basics-dropdowns-01-dropdown-states.rendered.html"},{"lineagePattern":"basics-dropdown-styles","lineagePath":"../../patterns/basics-dropdowns-02-dropdown-styles/basics-dropdowns-02-dropdown-styles.rendered.html"},{"lineagePattern":"components-card","lineagePath":"../../patterns/components-03-cards-00-card/components-03-cards-00-card.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/components/dropdowns/\">see complete documentation here</a></p>\n<p>Patternfly design specs are at <a href=\"http://www.patternfly.org/pattern-library/widgets/#dropdowns\">http://www.patternfly.org/pattern-library/widgets/#dropdowns</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"dropdowns"},"patternExtension":"hbs","patternName":"Dropdown","patternPartial":"basics-dropdown","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-dropdown-states","lineagePath":"../../patterns/basics-dropdowns-01-dropdown-states/basics-dropdowns-01-dropdown-states.rendered.html"},{"lineagePattern":"basics-dropdown-styles","lineagePath":"../../patterns/basics-dropdowns-02-dropdown-styles/basics-dropdowns-02-dropdown-styles.rendered.html"},{"lineagePattern":"components-card","lineagePath":"../../patterns/components-03-cards-00-card/components-03-cards-00-card.rendered.html"},{"lineagePattern":"components-main-toolbar","lineagePath":"../../patterns/components-toolbar-main-toolbar/components-toolbar-main-toolbar.rendered.html"}],"lineageR":[{"lineagePattern":"basics-dropdown-states","lineagePath":"../../patterns/basics-dropdowns-01-dropdown-states/basics-dropdowns-01-dropdown-states.rendered.html"},{"lineagePattern":"basics-dropdown-styles","lineagePath":"../../patterns/basics-dropdowns-02-dropdown-styles/basics-dropdowns-02-dropdown-styles.rendered.html"},{"lineagePattern":"components-card","lineagePath":"../../patterns/components-03-cards-00-card/components-03-cards-00-card.rendered.html"},{"lineagePattern":"components-main-toolbar","lineagePath":"../../patterns/components-toolbar-main-toolbar/components-toolbar-main-toolbar.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/components/dropdowns/\">see complete documentation here</a></p>\n<p>Patternfly design specs are at <a href=\"http://www.patternfly.org/pattern-library/widgets/#dropdowns\">http://www.patternfly.org/pattern-library/widgets/#dropdowns</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"dropdowns"},"patternExtension":"hbs","patternName":"Dropdown","patternPartial":"basics-dropdown","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="basics-dropdown-states" class="sg-pattern">
@@ -239,10 +239,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1478626785015">
+<script id="pl-js-polyfill-insert-1478804183532">
   (function() {
     if (self != top) {
-      var cb = '1478626785015';
+      var cb = '1478804183532';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -252,10 +252,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1478626785015">
+<script id="pl-js-insert-1478804183532">
   (function() {
     if (self != top) {
-      var cb = '1478626785015';
+      var cb = '1478804183532';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
