Added files from commit #82ac65789e1b944a0017203becefd56c5a40af03

--- a/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
+++ b/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
@@ -1,7 +1,7 @@
 <ul>
-  <li>Name: Siguror Hanigan</li>
-  <li>Name: Junius Koolen</li>
-  <li>Name: Duane Wilms</li>
-  <li>Name: Plinius Sloane</li>
-  <li>Name: Frans Keegan</li>
+  <li>Name: Matthias Macguinness</li>
+  <li>Name: Fergus Althuis</li>
+  <li>Name: Freyr Hines</li>
+  <li>Name: Teun Richard</li>
+  <li>Name: Aquila Achterkamp</li>
 </ul>
