--- a/patterns/basics/index.html
+++ b/patterns/basics/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1483638144432" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483638144432" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1483638144432" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1483638587907" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483638587907" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1483638587907" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483638144432" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483638144432" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483638587907" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483638587907" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -1488,11 +1488,11 @@ Patternfly style single level with dropdown open
   </div>
   <div class="sg-pattern-example">
     <ul>
-  <li>Name: Siguror Hanigan</li>
-  <li>Name: Junius Koolen</li>
-  <li>Name: Duane Wilms</li>
-  <li>Name: Plinius Sloane</li>
-  <li>Name: Frans Keegan</li>
+  <li>Name: Matthias Macguinness</li>
+  <li>Name: Fergus Althuis</li>
+  <li>Name: Freyr Hines</li>
+  <li>Name: Teun Richard</li>
+  <li>Name: Aquila Achterkamp</li>
 </ul>
 
   </div>
@@ -1542,10 +1542,10 @@ Patternfly style single level with dropdown open
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1483638144432">
+<script id="pl-js-polyfill-insert-1483638587907">
   (function() {
     if (self != top) {
-      var cb = '1483638144432';
+      var cb = '1483638587907';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -1555,10 +1555,10 @@ Patternfly style single level with dropdown open
   })();
 </script>
 
-<script id="pl-js-insert-1483638144432">
+<script id="pl-js-insert-1483638587907">
   (function() {
     if (self != top) {
-      var cb = '1483638144432';
+      var cb = '1483638587907';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
