Added files from commit #6e7db4465bd6b3efa2fd04eefec87b615ef30218

--- a/patterns/basics-dropdowns-kebab/basics-dropdowns-kebab.markup-only.html
+++ b/patterns/basics-dropdowns-kebab/basics-dropdowns-kebab.markup-only.html
@@ -3,6 +3,32 @@
          <span class="fa fa-ellipsis-v "></span>
      
     </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <div class="dropdown-menu ">
     <a class="dropdown-item" href="#">Action</a>
     <a class="dropdown-item" href="#">Another action</a>
