--- a/patterns/components-view-selector-view-selector/components-view-selector-view-selector.markup-only.html
+++ b/patterns/components-view-selector-view-selector/components-view-selector-view-selector.markup-only.html
@@ -3,12 +3,90 @@
        <span class="fa fa-th "></span>
    
   </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link pf-view-selector__btn-link active" aria-labelledby="Button">
        <span class="fa fa-th-large "></span>
    
   </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link pf-view-selector__btn-link" aria-labelledby="Button">
        <span class="fa fa-th-list "></span>
    
   </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
 </div>
