--- a/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.markup-only.html
+++ b/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.markup-only.html
@@ -2,10 +2,62 @@
      <span class="pf-icon pf-icon-home "></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-link" aria-labelledby="Button">
      <span class="fa fa-ellipsis-v "></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
 <br/>
 
@@ -13,14 +65,92 @@
      <span class="pf-icon pf-icon-home pf-icon--lg"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-link" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-link" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--sm"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
 <br/>
 
@@ -28,23 +158,179 @@
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-secondary" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-success" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-info" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-warning" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-danger" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
