--- a/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.rendered.html
+++ b/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.rendered.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1483638587907" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483638587907" media="all" />
-  <link rel="stylesheet" href="../../css/patternfly.css?1483638587907" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1483705214026" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705214026" media="all" />
+  <link rel="stylesheet" href="../../css/patternfly.css?1483705214026" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -18,8 +18,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483638587907" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483638587907" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705214026" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705214026" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -30,10 +30,62 @@
      <span class="pf-icon pf-icon-home "></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link" aria-labelledby="Button">
      <span class="fa fa-ellipsis-v "></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
 
   <br/>
 
@@ -41,14 +93,92 @@
      <span class="pf-icon pf-icon-home pf-icon--lg"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-link" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--sm"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
 
   <br/>
 
@@ -56,26 +186,182 @@
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-secondary" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-success" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-info" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-warning" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-danger" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -141,10 +427,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1483638587907">
+  <script id="pl-js-polyfill-insert-1483705214026">
     (function() {
       if (self != top) {
-        var cb = '1483638587907';
+        var cb = '1483705214026';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -154,10 +440,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1483638587907">
+  <script id="pl-js-insert-1483705214026">
     (function() {
       if (self != top) {
-        var cb = '1483638587907';
+        var cb = '1483705214026';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
