--- a/patterns/basics-buttons-button-styles/basics-buttons-button-styles.markup-only.html
+++ b/patterns/basics-buttons-button-styles/basics-buttons-button-styles.markup-only.html
@@ -1,18 +1,174 @@
 <button class="btn btn-primary" aria-labelledby="Button">
  Primary
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-secondary" aria-labelledby="Button">
  Secondary
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-success" aria-labelledby="Button">
  Success
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-info" aria-labelledby="Button">
  Info
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-warning" aria-labelledby="Button">
  Warning
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-danger" aria-labelledby="Button">
  Danger
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
