--- a/patterns/basics-buttons-button-styles/basics-buttons-button-styles.rendered.html
+++ b/patterns/basics-buttons-button-styles/basics-buttons-button-styles.rendered.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1483638587907" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483638587907" media="all" />
-  <link rel="stylesheet" href="../../css/patternfly.css?1483638587907" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1483705214026" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705214026" media="all" />
+  <link rel="stylesheet" href="../../css/patternfly.css?1483705214026" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -18,8 +18,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483638587907" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483638587907" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705214026" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705214026" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -29,21 +29,177 @@
   <button class="btn btn-primary" aria-labelledby="Button">
  Primary
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-secondary" aria-labelledby="Button">
  Secondary
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-success" aria-labelledby="Button">
  Success
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-info" aria-labelledby="Button">
  Info
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-warning" aria-labelledby="Button">
  Warning
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
   <button class="btn btn-danger" aria-labelledby="Button">
  Danger
 </button>
+
+
+  <div class="test-shadow inset m-3">
+    Shadow Inset - Level -1
+  </div>
+
+
+  <div class="test-shadow sm m-3">
+    Shadow Small - Level 1
+  </div>
+
+  <div class="test-shadow md m-3">
+    Shadow Medium - Level 2
+  </div>
+
+  <div class="test-shadow lg m-3">
+    Shadow Large - Level 3
+  </div>
+
+  <div class="test-shadow right m-3">
+    Shadow Small Right - Level 1
+  </div>
+
+  <div class="test-shadow left m-3">
+    Shadow Small Left - Level 1
+  </div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
@@ -109,10 +265,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1483638587907">
+  <script id="pl-js-polyfill-insert-1483705214026">
     (function() {
       if (self != top) {
-        var cb = '1483638587907';
+        var cb = '1483705214026';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -122,10 +278,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1483638587907">
+  <script id="pl-js-insert-1483705214026">
     (function() {
       if (self != top) {
-        var cb = '1483638587907';
+        var cb = '1483705214026';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
