--- a/patterns/basics-buttons-button/basics-buttons-button.markup-only.html
+++ b/patterns/basics-buttons-button/basics-buttons-button.markup-only.html
@@ -1,3 +1,29 @@
 <button class="btn btn-secondary" aria-labelledby="Button">
  Button
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
