--- a/patterns/basics-buttons/index.html
+++ b/patterns/basics-buttons/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1483638587907" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483638587907" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1483638587907" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1483705214026" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705214026" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1483705214026" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483638587907" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483638587907" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705214026" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705214026" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -55,6 +55,32 @@
  Button
 </button>
 
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
+
   </div>
   <script type="text/json" id="sg-pattern-data-basics-button" class="sg-pattern-data">
     {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-button-icon","lineagePath":"../../patterns/basics-buttons-button-icon/basics-buttons-button-icon.rendered.html"},{"lineagePattern":"basics-button-sizes","lineagePath":"../../patterns/basics-buttons-button-sizes/basics-buttons-button-sizes.rendered.html"},{"lineagePattern":"basics-button-styles","lineagePath":"../../patterns/basics-buttons-button-styles/basics-buttons-button-styles.rendered.html"},{"lineagePattern":"components-search","lineagePath":"../../patterns/components-forms-search/components-forms-search.rendered.html"},{"lineagePattern":"templates-form","lineagePath":"../../patterns/templates-form/templates-form.rendered.html"}],"lineageR":[{"lineagePattern":"basics-button-icon","lineagePath":"../../patterns/basics-buttons-button-icon/basics-buttons-button-icon.rendered.html"},{"lineagePattern":"basics-button-sizes","lineagePath":"../../patterns/basics-buttons-button-sizes/basics-buttons-button-sizes.rendered.html"},{"lineagePattern":"basics-button-styles","lineagePath":"../../patterns/basics-buttons-button-styles/basics-buttons-button-styles.rendered.html"},{"lineagePattern":"components-search","lineagePath":"../../patterns/components-forms-search/components-forms-search.rendered.html"},{"lineagePattern":"templates-form","lineagePath":"../../patterns/templates-form/templates-form.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/components/buttons/\">see complete documentation here</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"buttons"},"patternExtension":"hbs","patternName":"Button","patternPartial":"basics-button","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
@@ -79,6 +105,32 @@
  Button
 </button>
 
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
+
   </div>
   <script type="text/json" id="sg-pattern-data-basics-button-icon" class="sg-pattern-data">
     {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"basics-button","lineagePath":"../../patterns/basics-buttons-button/basics-buttons-button.rendered.html"},{"lineagePattern":"basics-icon","lineagePath":"../../patterns/basics-icons-icon/basics-icons-icon.rendered.html"}],"lineage":[{"lineagePattern":"basics-button","lineagePath":"../../patterns/basics-buttons-button/basics-buttons-button.rendered.html"},{"lineagePattern":"basics-icon","lineagePath":"../../patterns/basics-icons-icon/basics-icons-icon.rendered.html"}],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-button-icon-variations","lineagePath":"../../patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.rendered.html"},{"lineagePattern":"basics-dropdown","lineagePath":"../../patterns/basics-dropdowns-dropdown/basics-dropdowns-dropdown.rendered.html"},{"lineagePattern":"components-view-selector","lineagePath":"../../patterns/components-view-selector-view-selector/components-view-selector-view-selector.rendered.html"}],"lineageR":[{"lineagePattern":"basics-button-icon-variations","lineagePath":"../../patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.rendered.html"},{"lineagePattern":"basics-dropdown","lineagePath":"../../patterns/basics-dropdowns-dropdown/basics-dropdowns-dropdown.rendered.html"},{"lineagePattern":"components-view-selector","lineagePath":"../../patterns/components-view-selector-view-selector/components-view-selector-view-selector.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>A button containing an icon is used as part of the <a href=\"https://www.patternfly.org/pattern-library/forms-and-controls/toolbar/#_design\">Patternfly toolbar</a> and in other places.</p>\n<p>Add a modifier class to add color to the button, adjust the size, or to change to a transparent button.</p>\n<h2>Accessibility</h2>\n<p>Always include <code>aria-labelledby</code> if text is not included in the button.</p>\n<h2>Usage</h2>\n<p>No unique classes for this pattern. See button and icon patterns for customization.</p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"buttons"},"patternExtension":"hbs","patternName":"Button Icon","patternPartial":"basics-button-icon","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
@@ -102,10 +154,62 @@
      <span class="pf-icon pf-icon-home "></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-link" aria-labelledby="Button">
      <span class="fa fa-ellipsis-v "></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
 <br/>
 
@@ -113,14 +217,92 @@
      <span class="pf-icon pf-icon-home pf-icon--lg"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-link" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-link" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--sm"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
 <br/>
 
@@ -128,26 +310,182 @@
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-secondary" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-success" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-info" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-warning" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-danger" aria-labelledby="Button">
      <span class="pf-icon pf-icon-home pf-icon--md"></span>
  
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-button-icon-variations" class="sg-pattern-data">
@@ -171,9 +509,61 @@
     <button class="btn btn-primary btn-lg" aria-labelledby="Button">
  Primary
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-primary btn-sm" aria-labelledby="Button">
  Primary
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-button-sizes" class="sg-pattern-data">
@@ -197,21 +587,177 @@
     <button class="btn btn-primary" aria-labelledby="Button">
  Primary
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-secondary" aria-labelledby="Button">
  Secondary
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-success" aria-labelledby="Button">
  Success
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-info" aria-labelledby="Button">
  Info
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-warning" aria-labelledby="Button">
  Warning
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 <button class="btn btn-danger" aria-labelledby="Button">
  Danger
 </button>
+
+
+<div class="test-shadow inset m-3">
+  Shadow Inset - Level -1
+</div>
+
+
+<div class="test-shadow sm m-3">
+  Shadow Small - Level 1
+</div>
+
+<div class="test-shadow md m-3">
+  Shadow Medium - Level 2
+</div>
+
+<div class="test-shadow lg m-3">
+  Shadow Large - Level 3
+</div>
+
+<div class="test-shadow right m-3">
+  Shadow Small Right - Level 1
+</div>
+
+<div class="test-shadow left m-3">
+  Shadow Small Left - Level 1
+</div>
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-button-styles" class="sg-pattern-data">
@@ -260,10 +806,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1483638587907">
+<script id="pl-js-polyfill-insert-1483705214026">
   (function() {
     if (self != top) {
-      var cb = '1483638587907';
+      var cb = '1483705214026';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -273,10 +819,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1483638587907">
+<script id="pl-js-insert-1483705214026">
   (function() {
     if (self != top) {
-      var cb = '1483638587907';
+      var cb = '1483705214026';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
