Added files from commit #aac5caef6c763cf80482076647c52f6857d06935

--- a/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.markup-only.html
+++ b/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.markup-only.html
@@ -4,28 +4,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-link" aria-labelledby="Button">
@@ -34,28 +37,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -67,28 +73,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-link" aria-labelledby="Button">
@@ -97,28 +106,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-link" aria-labelledby="Button">
@@ -127,28 +139,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -160,28 +175,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-secondary" aria-labelledby="Button">
@@ -190,28 +208,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-success" aria-labelledby="Button">
@@ -220,28 +241,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-info" aria-labelledby="Button">
@@ -250,28 +274,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-warning" aria-labelledby="Button">
@@ -280,28 +307,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-danger" aria-labelledby="Button">
@@ -310,27 +340,30 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
