--- a/patterns/templates-cardview-cardview/templates-cardview-cardview.markup-only.html
+++ b/patterns/templates-cardview-cardview/templates-cardview-cardview.markup-only.html
@@ -271,28 +271,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -317,28 +320,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -363,28 +369,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -409,28 +418,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -639,28 +651,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -687,28 +702,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -735,28 +753,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
@@ -783,28 +804,31 @@
                 </button>
 
 
-            <div class="test-shadow inset m-3">
+            <div class="test-shadow inset m-2">
               Shadow Inset - Level -1
             </div>
 
+            <div class="test-shadow m-2">
+              No Shadow - Level 0
+            </div>
 
-            <div class="test-shadow sm m-3">
+            <div class="test-shadow sm m-2">
               Shadow Small - Level 1
             </div>
 
-            <div class="test-shadow md m-3">
+            <div class="test-shadow md m-2">
               Shadow Medium - Level 2
             </div>
 
-            <div class="test-shadow lg m-3">
+            <div class="test-shadow lg m-2">
               Shadow Large - Level 3
             </div>
 
-            <div class="test-shadow right m-3">
+            <div class="test-shadow right m-2">
               Shadow Small Right - Level 1
             </div>
 
-            <div class="test-shadow left m-3">
+            <div class="test-shadow left m-2">
               Shadow Small Left - Level 1
             </div>
             <div class="dropdown-menu dropdown-menu-right">
