--- a/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.rendered.html
+++ b/patterns/basics-buttons-button-icon-variations/basics-buttons-button-icon-variations.rendered.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1483705214026" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705214026" media="all" />
-  <link rel="stylesheet" href="../../css/patternfly.css?1483705214026" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1483705884227" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705884227" media="all" />
+  <link rel="stylesheet" href="../../css/patternfly.css?1483705884227" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -18,8 +18,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705214026" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705214026" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705884227" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705884227" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -32,28 +32,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-link" aria-labelledby="Button">
@@ -62,28 +65,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
 
@@ -95,28 +101,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-link" aria-labelledby="Button">
@@ -125,28 +134,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-link" aria-labelledby="Button">
@@ -155,28 +167,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
 
@@ -188,28 +203,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-secondary" aria-labelledby="Button">
@@ -218,28 +236,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-success" aria-labelledby="Button">
@@ -248,28 +269,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-info" aria-labelledby="Button">
@@ -278,28 +302,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-warning" aria-labelledby="Button">
@@ -308,28 +335,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-danger" aria-labelledby="Button">
@@ -338,28 +368,31 @@
 </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
 
@@ -427,10 +460,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1483705214026">
+  <script id="pl-js-polyfill-insert-1483705884227">
     (function() {
       if (self != top) {
-        var cb = '1483705214026';
+        var cb = '1483705884227';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -440,10 +473,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1483705214026">
+  <script id="pl-js-insert-1483705884227">
     (function() {
       if (self != top) {
-        var cb = '1483705214026';
+        var cb = '1483705884227';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
