--- a/patterns/basics-buttons-button-styles/basics-buttons-button-styles.markup-only.html
+++ b/patterns/basics-buttons-button-styles/basics-buttons-button-styles.markup-only.html
@@ -3,28 +3,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-secondary" aria-labelledby="Button">
@@ -32,28 +35,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-success" aria-labelledby="Button">
@@ -61,28 +67,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-info" aria-labelledby="Button">
@@ -90,28 +99,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-warning" aria-labelledby="Button">
@@ -119,28 +131,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-danger" aria-labelledby="Button">
@@ -148,27 +163,30 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
