--- a/patterns/basics-buttons/index.html
+++ b/patterns/basics-buttons/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1483705214026" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705214026" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1483705214026" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1483705884227" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483705884227" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1483705884227" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705214026" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705214026" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483705884227" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483705884227" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -56,28 +56,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -106,28 +109,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -156,28 +162,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-link" aria-labelledby="Button">
@@ -186,28 +195,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -219,28 +231,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-link" aria-labelledby="Button">
@@ -249,28 +264,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-link" aria-labelledby="Button">
@@ -279,28 +297,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -312,28 +333,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-secondary" aria-labelledby="Button">
@@ -342,28 +366,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-success" aria-labelledby="Button">
@@ -372,28 +399,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-info" aria-labelledby="Button">
@@ -402,28 +432,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-warning" aria-labelledby="Button">
@@ -432,28 +465,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-danger" aria-labelledby="Button">
@@ -462,28 +498,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -511,28 +550,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-primary btn-sm" aria-labelledby="Button">
@@ -540,28 +582,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -589,28 +634,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-secondary" aria-labelledby="Button">
@@ -618,28 +666,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-success" aria-labelledby="Button">
@@ -647,28 +698,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-info" aria-labelledby="Button">
@@ -676,28 +730,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-warning" aria-labelledby="Button">
@@ -705,28 +762,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 <button class="btn btn-danger" aria-labelledby="Button">
@@ -734,28 +794,31 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
 
@@ -806,10 +869,10 @@
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1483705214026">
+<script id="pl-js-polyfill-insert-1483705884227">
   (function() {
     if (self != top) {
-      var cb = '1483705214026';
+      var cb = '1483705884227';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -819,10 +882,10 @@
   })();
 </script>
 
-<script id="pl-js-insert-1483705214026">
+<script id="pl-js-insert-1483705884227">
   (function() {
     if (self != top) {
-      var cb = '1483705214026';
+      var cb = '1483705884227';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
