--- a/patterns/components-forms-search/components-forms-search.markup-only.html
+++ b/patterns/components-forms-search/components-forms-search.markup-only.html
@@ -4,27 +4,30 @@
 </button>
 
 
-<div class="test-shadow inset m-3">
+<div class="test-shadow inset m-2">
   Shadow Inset - Level -1
 </div>
 
+<div class="test-shadow m-2">
+  No Shadow - Level 0
+</div>
 
-<div class="test-shadow sm m-3">
+<div class="test-shadow sm m-2">
   Shadow Small - Level 1
 </div>
 
-<div class="test-shadow md m-3">
+<div class="test-shadow md m-2">
   Shadow Medium - Level 2
 </div>
 
-<div class="test-shadow lg m-3">
+<div class="test-shadow lg m-2">
   Shadow Large - Level 3
 </div>
 
-<div class="test-shadow right m-3">
+<div class="test-shadow right m-2">
   Shadow Small Right - Level 1
 </div>
 
-<div class="test-shadow left m-3">
+<div class="test-shadow left m-2">
   Shadow Small Left - Level 1
 </div>
