--- a/patterns/components-view-selector-view-selector/components-view-selector-view-selector.markup-only.html
+++ b/patterns/components-view-selector-view-selector/components-view-selector-view-selector.markup-only.html
@@ -5,28 +5,31 @@
   </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-link pf-view-selector__btn-link active" aria-labelledby="Button">
@@ -35,28 +38,31 @@
   </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
   <button class="btn btn-link pf-view-selector__btn-link" aria-labelledby="Button">
@@ -65,28 +71,31 @@
   </button>
 
 
-  <div class="test-shadow inset m-3">
+  <div class="test-shadow inset m-2">
     Shadow Inset - Level -1
   </div>
 
+  <div class="test-shadow m-2">
+    No Shadow - Level 0
+  </div>
 
-  <div class="test-shadow sm m-3">
+  <div class="test-shadow sm m-2">
     Shadow Small - Level 1
   </div>
 
-  <div class="test-shadow md m-3">
+  <div class="test-shadow md m-2">
     Shadow Medium - Level 2
   </div>
 
-  <div class="test-shadow lg m-3">
+  <div class="test-shadow lg m-2">
     Shadow Large - Level 3
   </div>
 
-  <div class="test-shadow right m-3">
+  <div class="test-shadow right m-2">
     Shadow Small Right - Level 1
   </div>
 
-  <div class="test-shadow left m-3">
+  <div class="test-shadow left m-2">
     Shadow Small Left - Level 1
   </div>
 </div>
