Added files from commit #daa6e66ee6d6bcca90cd4810c67b4d23b76ca5ab

--- a/patterns/basics-utilities-box-shadow/basics-utilities-box-shadow.rendered.html
+++ b/patterns/basics-utilities-box-shadow/basics-utilities-box-shadow.rendered.html
@@ -27,55 +27,53 @@
 
 <body class="">
 
-  <div class="card pf-card     ">
-    <div class="card-block">
-      <div class="dropdown  pf-dropdown--kebab pull-right" aria-labelledby="Dropdown">
-        <button class="btn btn-link" aria-labelledby="Button">
-               <span class="fa fa-ellipsis-v "></span>
-           
-          </button>
-        <div class="dropdown-menu dropdown-menu-right">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </div>
-      <h4 class="card-title">Card with Kebab</h4>
-      <p class="card-text">This card has a kebab.</p>
-    </div>
+  <div class="pf-box-shadow-inset m-2 p-1 bg-warning text-white">
+    Inset Shadow level -1 <small>.pf-box-shadow-inset</small>
+  </div>
+
+  <div class="pf-box-shadow-none m-2 p-1 bg-warning text-white">
+    No Shadow Level 0 <small>.pf-box-shadow-none</small>
+  </div>
+
+  <div class="pf-box-shadow-sm m-2 p-1 bg-warning text-white">
+    Shadow Small Level 1 <small>.pf-box-shadow-sm</small>
+  </div>
+
+  <div class="pf-box-shadow-md m-2 p-1 bg-warning text-white">
+    Shadow Medium Level 2 <small>.pf-box-shadow-md</small>
+  </div>
+
+  <div class="pf-box-shadow-lg m-2 p-1 bg-warning text-white">
+    Shadow Large Level 3 <small>.pf-box-shadow-lg</small>
+  </div>
+
+  <div class="pf-box-shadow-right m-2 p-1 bg-warning text-white">
+    Shadow Small Right Level 1 <small>.pf-box-shadow-right</small>
+  </div>
+
+  <div class="pf-box-shadow-left m-2 p-1 bg-warning text-white">
+    Shadow Small Left Level 1 <small>.pf-box-shadow-left</small>
   </div>
 
   <!--DO NOT REMOVE-->
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
     {
       "cssEnabled": false,
-      "patternLineageExists": true,
-      "patternLineages": [{
-        "lineagePattern": "components-card",
-        "lineagePath": "../../patterns/components-cards-card/components-cards-card.rendered.html"
-      }],
-      "lineage": [{
-        "lineagePattern": "components-card",
-        "lineagePath": "../../patterns/components-cards-card/components-cards-card.rendered.html"
-      }],
-      "patternLineageRExists": true,
-      "patternLineagesR": [{
-        "lineagePattern": "templates-cardview",
-        "lineagePath": "../../patterns/templates-cardview-cardview/templates-cardview-cardview.rendered.html"
-      }],
-      "lineageR": [{
-        "lineagePattern": "templates-cardview",
-        "lineagePath": "../../patterns/templates-cardview-cardview/templates-cardview-cardview.rendered.html"
-      }],
-      "patternLineageEExists": true,
-      "patternDesc": "<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/components/card/\">see complete documentation here</a></p>\n<h2>Usage</h2>\n<table>\n<thead>\n<tr>\n<th>Class</th>\n<th>Usage</th>\n</tr>\n</thead>\n<tbody>\n<tr>\n<td><code>.pf-dropdown--kebab</code> <strong>Applied to:</strong> <code>.dropdown</code></td>\n<td><strong>Outcome:</strong> Applies css for positioning the kebab within the card  <strong>Required:</strong> Yes</td>\n</tr>\n<tr>\n<td><code>.pull-right</code> <strong>Applied to:</strong> <code>.dropdown</code></td>\n<td><strong>Outcome:</strong> Applies css for positioning the kebab within the card <strong>Required:</strong> Yes</td>\n</tr>\n</tbody>\n</table>\n",
+      "patternLineageExists": false,
+      "patternLineages": [],
+      "lineage": [],
+      "patternLineageRExists": false,
+      "patternLineagesR": [],
+      "lineageR": [],
+      "patternLineageEExists": false,
+      "patternDesc": "<p>This is a <em>Markdown</em> description of my pattern.</p>\n",
       "patternBreadcrumb": {
-        "patternType": "components",
-        "patternSubtype": "cards"
+        "patternType": "basics",
+        "patternSubtype": "utilities"
       },
       "patternExtension": "hbs",
-      "patternName": "Card Kebab",
-      "patternPartial": "components-card-kebab",
+      "patternName": "Box Shadow",
+      "patternPartial": "basics-box-shadow",
       "patternState": "",
       "patternEngineName": "handlebars",
       "extraOutput": {}
