--- a/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
+++ b/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
@@ -1,7 +1,7 @@
 <ul>
   <li>Name: Jacobus Sneiders</li>
-  <li>Name: Freyr Hines</li>
+  <li>Name: Plinius Sloane</li>
+  <li>Name: Teun Richard</li>
   <li>Name: Duane Wilms</li>
-  <li>Name: Junius Koolen</li>
-  <li>Name: Matthias Macguinness</li>
+  <li>Name: Bertil Aaij</li>
 </ul>
