--- a/patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html
+++ b/patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html
@@ -27,7 +27,7 @@
 
 <body class="">
   <div class="table-responsive">
-    <table class="table    ">
+    <table class="table table-striped table-bordered table-hover ">
       <thead>
         <tr>
           <th>Session</th>
@@ -49,7 +49,7 @@
           <td>T </td>
           <td>20115</td>
         </tr>
-        <tr class="">
+        <tr class="table-active">
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6020</td>
           <td>Ethical Issues in Organizational Communication</td>
@@ -58,7 +58,7 @@
           <td>W </td>
           <td>21509</td>
         </tr>
-        <tr class="">
+        <tr class="table-success">
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6050</td>
           <td>Crisis Communication</td>
@@ -67,7 +67,7 @@
           <td>W </td>
           <td>20915</td>
         </tr>
-        <tr class="">
+        <tr class="table-info">
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6050</td>
           <td>Crisis Communication</td>
@@ -76,7 +76,7 @@
           <td>Th </td>
           <td>21550</td>
         </tr>
-        <tr class="">
+        <tr class="table-warning">
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6060</td>
           <td>Negotiation, Mediation, and Facilitation</td>
@@ -85,7 +85,7 @@
           <td>Th </td>
           <td>20119</td>
         </tr>
-        <tr class="">
+        <tr class="table-danger">
           <td><a href="#">Winter 2014 Full-Term Session</a></td>
           <td>CMN 6060</td>
           <td>Negotiation, Mediation, and Facilitation</td>
@@ -138,33 +138,27 @@
   <script type="text/json" id="sg-pattern-data-footer" class="sg-pattern-data">
     {
       "cssEnabled": false,
-      "patternLineageExists": false,
-      "patternLineages": [],
-      "lineage": [],
-      "patternLineageRExists": true,
-      "patternLineagesR": [{
-        "lineagePattern": "basics-table-contextual-classes",
-        "lineagePath": "../../patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html"
-      }, {
-        "lineagePattern": "basics-table-patternfly",
-        "lineagePath": "../../patterns/basics-table-table-patternfly/basics-table-table-patternfly.rendered.html"
+      "patternLineageExists": true,
+      "patternLineages": [{
+        "lineagePattern": "basics-table",
+        "lineagePath": "../../patterns/basics-table-table/basics-table-table.rendered.html"
       }],
-      "lineageR": [{
-        "lineagePattern": "basics-table-contextual-classes",
-        "lineagePath": "../../patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html"
-      }, {
-        "lineagePattern": "basics-table-patternfly",
-        "lineagePath": "../../patterns/basics-table-table-patternfly/basics-table-table-patternfly.rendered.html"
+      "lineage": [{
+        "lineagePattern": "basics-table",
+        "lineagePath": "../../patterns/basics-table-table/basics-table-table.rendered.html"
       }],
+      "patternLineageRExists": false,
+      "patternLineagesR": [],
+      "lineageR": [],
       "patternLineageEExists": true,
-      "patternDesc": "<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/content/tables/\">see complete documentation here</a></p>\n",
+      "patternDesc": "<h2>Overview</h2>\n<p>Use contextual classes to color table rows or individual cells. <a href=\"http://v4-alpha.getbootstrap.com/content/tables/#contextual-classes\">See complete documentation here</a></p>\n",
       "patternBreadcrumb": {
         "patternType": "basics",
         "patternSubtype": "table"
       },
       "patternExtension": "hbs",
-      "patternName": "Table",
-      "patternPartial": "basics-table",
+      "patternName": "Table Contextual Classes",
+      "patternPartial": "basics-table-contextual-classes",
       "patternState": "",
       "patternEngineName": "handlebars",
       "extraOutput": {}
