--- a/patterns/basics-table-table-patternfly/basics-table-table-patternfly.markup-only.html
+++ b/patterns/basics-table-table-patternfly/basics-table-table-patternfly.markup-only.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="table    ">
+  <table class="table table-striped table-bordered table-hover ">
     <thead>
       <tr>
         <th>Session</th>
