--- a/styleguide/html/styleguide.html
+++ b/styleguide/html/styleguide.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" href="../../css/style.css?1483712165409" media="all" />
-    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1483712165409" media="all" />
-    <link rel="stylesheet" href="../../css/patternfly.css?1483712165409" media="all" />
+    <link rel="stylesheet" href="../../css/style.css?1484058440324" media="all" />
+    <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1484058440324" media="all" />
+    <link rel="stylesheet" href="../../css/patternfly.css?1484058440324" media="all" />
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     <!-- never cache patterns -->
@@ -17,8 +17,8 @@
 <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <meta http-equiv="pragma" content="no-cache" />
 
-<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1483712165409" media="all">
-<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1483712165409" media="all" />
+<link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1484058440324" media="all">
+<link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1484058440324" media="all" />
 
     <!-- End Pattern Lab -->
 
@@ -721,11 +721,11 @@
   </div>
   <div class="sg-pattern-example">
     <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table    ">
     <thead>
       <tr>
         <th>Session</th>
-        <th class="text-right">Course Number</th>
+        <th>Course Number</th>
         <th>Title</th>
         <th>Level</th>
         <th>Course Format</th>
@@ -743,7 +743,7 @@
         <td>T </td>
         <td>20115</td>
       </tr>
-      <tr>
+      <tr class="">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6020</td>
         <td>Ethical Issues in Organizational Communication</td>
@@ -752,7 +752,7 @@
         <td>W </td>
         <td>21509</td>
       </tr>
-      <tr>
+      <tr class="">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6050</td>
         <td>Crisis Communication</td>
@@ -761,7 +761,7 @@
         <td>W </td>
         <td>20915</td>
       </tr>
-      <tr>
+      <tr class="">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6050</td>
         <td>Crisis Communication</td>
@@ -770,7 +770,7 @@
         <td>Th </td>
         <td>21550</td>
       </tr>
-      <tr>
+      <tr class="">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6060</td>
         <td>Negotiation, Mediation, and Facilitation</td>
@@ -779,7 +779,7 @@
         <td>Th </td>
         <td>20119</td>
       </tr>
-      <tr>
+      <tr class="">
         <td><a href="#">Winter 2014 Full-Term Session</a></td>
         <td>CMN 6060</td>
         <td>Negotiation, Mediation, and Facilitation</td>
@@ -830,7 +830,261 @@
 
   </div>
   <script type="text/json" id="sg-pattern-data-basics-table" class="sg-pattern-data">
-    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":false,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/content/tables/\">see complete documentation here</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"table"},"patternExtension":"hbs","patternName":"Table","patternPartial":"basics-table","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+    {"cssEnabled":false,"patternLineageExists":false,"patternLineages":[],"lineage":[],"patternLineageRExists":true,"patternLineagesR":[{"lineagePattern":"basics-table-contextual-classes","lineagePath":"../../patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html"},{"lineagePattern":"basics-table-patternfly","lineagePath":"../../patterns/basics-table-table-patternfly/basics-table-table-patternfly.rendered.html"}],"lineageR":[{"lineagePattern":"basics-table-contextual-classes","lineagePath":"../../patterns/basics-table-table-contextual-classes/basics-table-table-contextual-classes.rendered.html"},{"lineagePattern":"basics-table-patternfly","lineagePath":"../../patterns/basics-table-table-patternfly/basics-table-table-patternfly.rendered.html"}],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>This is a Bootstrap component, <a href=\"http://v4-alpha.getbootstrap.com/content/tables/\">see complete documentation here</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"table"},"patternExtension":"hbs","patternName":"Table","patternPartial":"basics-table","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+  </script>
+</div><!--end .sg-pattern-->
+<div id="basics-table-contextual-classes" class="sg-pattern">
+  <div class="sg-pattern-head">
+    <h3 class="sg-pattern-title">
+      <a href="../../patterns/basics-table-table-contextual-classes&#x2F;basics-table-table-contextual-classes.rendered.html" class="patternLink" data-patternpartial="basics-table-contextual-classes" title="Link to Pattern">
+          Table Contextual Classes
+      </a>
+    </h3>
+    <div class="sg-pattern-breadcrumb"></div>
+    <a href="#" data-patternpartial="basics-table-contextual-classes" title="View Pattern Info" id="sg-pattern-extra-toggle-basics-table-contextual-classes" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
+  </div>
+  <div class="sg-pattern-extra" id="sg-pattern-extra-basics-table-contextual-classes">
+    
+  </div>
+  <div class="sg-pattern-example">
+    <div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover ">
+    <thead>
+      <tr>
+        <th>Session</th>
+        <th>Course Number</th>
+        <th>Title</th>
+        <th>Level</th>
+        <th>Course Format</th>
+        <th>Days</th>
+        <th>CRN</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6020</td>
+        <td>Ethical Issues in Organizational Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>T </td>
+        <td>20115</td>
+      </tr>
+      <tr class="table-active">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6020</td>
+        <td>Ethical Issues in Organizational Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>W </td>
+        <td>21509</td>
+      </tr>
+      <tr class="table-success">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6050</td>
+        <td>Crisis Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>W </td>
+        <td>20915</td>
+      </tr>
+      <tr class="table-info">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6050</td>
+        <td>Crisis Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>21550</td>
+      </tr>
+      <tr class="table-warning">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>20119</td>
+      </tr>
+      <tr class="table-danger">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>T </td>
+        <td>20122</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>T </td>
+        <td>21511</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>21330</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6061</td>
+        <td>Personal Branding</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>20124</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6080</td>
+        <td>Intercultural Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>W </td>
+        <td>20126</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+  </div>
+  <script type="text/json" id="sg-pattern-data-basics-table-contextual-classes" class="sg-pattern-data">
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"basics-table","lineagePath":"../../patterns/basics-table-table/basics-table-table.rendered.html"}],"lineage":[{"lineagePattern":"basics-table","lineagePath":"../../patterns/basics-table-table/basics-table-table.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>Use contextual classes to color table rows or individual cells. <a href=\"http://v4-alpha.getbootstrap.com/content/tables/#contextual-classes\">See complete documentation here</a></p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"table"},"patternExtension":"hbs","patternName":"Table Contextual Classes","patternPartial":"basics-table-contextual-classes","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
+  </script>
+</div><!--end .sg-pattern-->
+<div id="basics-table-patternfly" class="sg-pattern">
+  <div class="sg-pattern-head">
+    <h3 class="sg-pattern-title">
+      <a href="../../patterns/basics-table-table-patternfly&#x2F;basics-table-table-patternfly.rendered.html" class="patternLink" data-patternpartial="basics-table-patternfly" title="Link to Pattern">
+          Table Patternfly
+      </a>
+    </h3>
+    <div class="sg-pattern-breadcrumb"></div>
+    <a href="#" data-patternpartial="basics-table-patternfly" title="View Pattern Info" id="sg-pattern-extra-toggle-basics-table-patternfly" class="sg-pattern-extra-toggle"><span>&#9660;</span></a>
+  </div>
+  <div class="sg-pattern-extra" id="sg-pattern-extra-basics-table-patternfly">
+    
+  </div>
+  <div class="sg-pattern-example">
+    <div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover ">
+    <thead>
+      <tr>
+        <th>Session</th>
+        <th>Course Number</th>
+        <th>Title</th>
+        <th>Level</th>
+        <th>Course Format</th>
+        <th>Days</th>
+        <th>CRN</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6020</td>
+        <td>Ethical Issues in Organizational Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>T </td>
+        <td>20115</td>
+      </tr>
+      <tr class="">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6020</td>
+        <td>Ethical Issues in Organizational Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>W </td>
+        <td>21509</td>
+      </tr>
+      <tr class="">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6050</td>
+        <td>Crisis Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>W </td>
+        <td>20915</td>
+      </tr>
+      <tr class="">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6050</td>
+        <td>Crisis Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>21550</td>
+      </tr>
+      <tr class="">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>20119</td>
+      </tr>
+      <tr class="">
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>T </td>
+        <td>20122</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>T </td>
+        <td>21511</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6060</td>
+        <td>Negotiation, Mediation, and Facilitation</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>21330</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6061</td>
+        <td>Personal Branding</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>Th </td>
+        <td>20124</td>
+      </tr>
+      <tr>
+        <td><a href="#">Winter 2014 Full-Term Session</a></td>
+        <td>CMN 6080</td>
+        <td>Intercultural Communication</td>
+        <td>Graduate</td>
+        <td>Online</td>
+        <td>W </td>
+        <td>20126</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+  </div>
+  <script type="text/json" id="sg-pattern-data-basics-table-patternfly" class="sg-pattern-data">
+    {"cssEnabled":false,"patternLineageExists":true,"patternLineages":[{"lineagePattern":"basics-table","lineagePath":"../../patterns/basics-table-table/basics-table-table.rendered.html"}],"lineage":[{"lineagePattern":"basics-table","lineagePath":"../../patterns/basics-table-table/basics-table-table.rendered.html"}],"patternLineageRExists":false,"patternLineagesR":[],"lineageR":[],"patternLineageEExists":true,"patternDesc":"<h2>Overview</h2>\n<p>PatternFly recommends using a striped, bordered, hover and responsive table.</p>\n","patternBreadcrumb":{"patternType":"basics","patternSubtype":"table"},"patternExtension":"hbs","patternName":"Table Patternfly","patternPartial":"basics-table-patternfly","patternState":"","patternEngineName":"handlebars","extraOutput":{}}
   </script>
 </div><!--end .sg-pattern-->
 <div id="viewall-basics-tabs" class="sg-pattern-category">
@@ -1544,11 +1798,11 @@ Patternfly style single level with dropdown open
   </div>
   <div class="sg-pattern-example">
     <ul>
+  <li>Name: Freyr Hines</li>
+  <li>Name: Teun Richard</li>
   <li>Name: Bertil Aaij</li>
-  <li>Name: Duane Wilms</li>
-  <li>Name: Matthias Macguinness</li>
   <li>Name: Aquila Achterkamp</li>
-  <li>Name: Fergus Althuis</li>
+  <li>Name: Plinius Sloane</li>
 </ul>
 
   </div>
@@ -3449,10 +3703,10 @@ Patternfly style single level with dropdown open
   }
 </script>
 
-<script id="pl-js-polyfill-insert-1483712165409">
+<script id="pl-js-polyfill-insert-1484058440324">
   (function() {
     if (self != top) {
-      var cb = '1483712165409';
+      var cb = '1484058440324';
       var js = [];
       if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
         js.push('styleguide/bower_components/classList.min.js');
@@ -3462,10 +3716,10 @@ Patternfly style single level with dropdown open
   })();
 </script>
 
-<script id="pl-js-insert-1483712165409">
+<script id="pl-js-insert-1484058440324">
   (function() {
     if (self != top) {
-      var cb = '1483712165409';
+      var cb = '1484058440324';
       var js = [ { 'src': 'styleguide/bower_components/jwerty.min.js', 'dep': [ 'styleguide/js/patternlab-pattern.min.js' ] } ];
       scriptLoader.run(js,cb,'pl-js-insert');
     }
