Added files from commit #7a5b83f0b803aec9dba92f2843d4bb753e106caa

--- a/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
+++ b/patterns/basics-zexample-listitems/basics-zexample-listitems.markup-only.html
@@ -1,7 +1,7 @@
 <ul>
-  <li>Name: Matthias Macguinness</li>
+  <li>Name: Plinius Sloane</li>
   <li>Name: Aquila Achterkamp</li>
-  <li>Name: Jacobus Sneiders</li>
+  <li>Name: Fergus Althuis</li>
+  <li>Name: Freyr Hines</li>
   <li>Name: Junius Koolen</li>
-  <li>Name: Teun Richard</li>
 </ul>
