--- a/patterns/basics-forms-input/basics-forms-input.rendered.html
+++ b/patterns/basics-forms-input/basics-forms-input.rendered.html
@@ -6,9 +6,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="../../css/style.css?1485287200094" media="all" />
-  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1485287200094" media="all" />
-  <link rel="stylesheet" href="../../css/patternfly.css?1485287200094" media="all" />
+  <link rel="stylesheet" href="../../css/style.css?1485372637028" media="all" />
+  <link rel="stylesheet" href="../../css/pattern-scaffolding.css?1485372637028" media="all" />
+  <link rel="stylesheet" href="../../css/patternfly.css?1485372637028" media="all" />
 
   <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
   <!-- never cache patterns -->
@@ -18,8 +18,8 @@
   <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1485287200094" media="all">
-  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1485287200094" media="all" />
+  <link rel="stylesheet" href="../../styleguide/css/styleguide.min.css?1485372637028" media="all">
+  <link rel="stylesheet" href="../../styleguide/css/prism-typeahead.min.css?1485372637028" media="all" />
 
   <!-- End Pattern Lab -->
 
@@ -29,6 +29,75 @@
   <form class="form-inline">
     <label class="sr-only" for="inlineFormInput">Name</label>
     <input type="text" class="form-control" id="inlineFormInput" placeholder="Jane Doe">
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-group">
+      <label for="exampleSelect1">Example select</label>
+      <select class="form-control" id="exampleSelect1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+    </div>
+    <div class="form-group">
+      <label for="exampleSelect2">Example multiple select</label>
+      <select multiple class="form-control" id="exampleSelect2">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+    </div>
+    <div class="form-group">
+      <label for="exampleTextarea">Example textarea</label>
+      <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputFile">File input</label>
+      <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+      <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
+    </div>
+    <fieldset class="form-group">
+      <legend>Radio buttons</legend>
+      <div class="form-check">
+        <label class="form-check-label">
+        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+        Option one is this and that&mdash;be sure to include why it's great
+      </label>
+      </div>
+      <div class="form-check">
+        <label class="form-check-label">
+        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+        Option two can be something else and selecting it will deselect option one
+      </label>
+      </div>
+      <div class="form-check disabled">
+        <label class="form-check-label">
+        <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3" disabled>
+        Option three is disabled
+      </label>
+      </div>
+    </fieldset>
+    <div class="form-check">
+      <label class="form-check-label">
+      <input type="checkbox" class="form-check-input">
+      Check me out
+    </label>
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
@@ -102,10 +171,10 @@
     }
   </script>
 
-  <script id="pl-js-polyfill-insert-1485287200094">
+  <script id="pl-js-polyfill-insert-1485372637028">
     (function() {
       if (self != top) {
-        var cb = '1485287200094';
+        var cb = '1485372637028';
         var js = [];
         if (typeof document !== 'undefined' && !('classList' in document.documentElement)) {
           js.push('styleguide/bower_components/classList.min.js');
@@ -115,10 +184,10 @@
     })();
   </script>
 
-  <script id="pl-js-insert-1485287200094">
+  <script id="pl-js-insert-1485372637028">
     (function() {
       if (self != top) {
-        var cb = '1485287200094';
+        var cb = '1485372637028';
         var js = [{
           'src': 'styleguide/bower_components/jwerty.min.js',
           'dep': ['styleguide/js/patternlab-pattern.min.js']
